# sound-playground

./: .gitignore  CMakeLists.txt  SoundPlayground.sln  SoundPlayground.vcxproj  SoundPlayground.vcxproj.filters
lib/: CMakeLists.txt
lib/fftw/lib/: libfftw3f-3.lib
lib/portaudio/: portaudio_x64.lib
lib/tinygltf/: tiny_gltf.h
res/: platform.glb  speaker_small.glb  suzanne.glb
res/assets/: microphone.txt  platform.txt  speaker.txt
res/models/: mic.glb
res/shaders/: composite.frag  composite.vert  gbuffers.frag  gbuffers.vert  main.frag  main.vert  main.vert.spv  shadow.frag  shadow.vert  ui.frag  ui.vert
res/textures/: testTex.tga  ui.tga
src/: CMakeLists.txt  main.cpp
src/Audio/: ADelayLine.cpp  ADelayLine.h  AInterpParameter.cpp  AWAVFile.h  AudioComponent.cpp  AudioComponent.h  AudioEngine.cpp  AudioEngine.h  AudioOutputComponent.cpp  AudioOutputComponent.h
src/Audio/Auralization/: Auralizer.h
src/Audio/Components/: AMicrophone.cpp  AMicrophone.h  ASpeaker.cpp  ASpeaker.h  AudioComponent.cpp  AudioComponent.h  AudioOutputComponent.h  AuralizingAudioComponent.cpp  AuralizingAudioComponent.h  GeneratingAudioComponent.cpp  GeneratingAudioComponent.h  OutputAudioComponent.cpp  OutputAudioComponent.h
src/Audio/DSP/: AConvolver.cpp  AConvolver.h  ADSPBase.h  ADelayLine.cpp  ADelayLine.h  AInterpParameter.h
src/Engine/: CMakeLists.txt  ECamera.cpp  ECamera.h  EComponent.cpp  EComponent.h  EInput.cpp  EInput.h  EInputComponent.cpp  EInputComponent.h  EModel.cpp  EModel.h  EObject.cpp  EObject.h  EScheduler.cpp  EScheduler.h  EWorld.cpp  EWorld.h  Engine.cpp  Engine.h  Loader.cpp  Loader.h  LoaderInterface.h  SystemInterface.h  SystemObjectInterface.cpp  SystemObjectInterface.h  SystemSceneInterface.cpp  SystemSceneInterface.h  UObject.cpp  UObject.h  UScene.cpp  UScene.h
src/Graphics/: CameraGraphicsObject.cpp  CameraGraphicsObject.h  GMesh.cpp  GMesh.h  GProgram.cpp  GProgram.h  GTexture.cpp  GTexture.h  GraphicsObject.cpp  GraphicsObject.h  GraphicsScene.cpp  GraphicsScene.h  GraphicsSystem.cpp  GraphicsSystem.h  Matrix.h  MeshGraphicsObject.cpp  MeshGraphicsObject.h  Render.cpp  Render.h  matrix.cpp
src/Input/: CameraInputObject.cpp  CameraInputObject.h  InputObject.cpp  InputObject.h  InputScene.cpp  InputScene.h  InputSystem.cpp  InputSystem.h
src/Managers/: AssetManager.cpp  AssetManager.h  AssetManagerInterface.h  AssetTypes.h  CMakeLists.txt  EnvironmentManager.cpp  EnvironmentManager.h  ServiceManager.cpp  ServiceManager.h  ServiceManagerInterface.h  StateManager.cpp  StateManager.h
src/Objects/: ECamera.cpp  EModel.cpp  EModel.h  EObject.cpp  EObject.h  ESpeaker.cpp  ESpeaker.h  USpeaker.cpp  USpeaker.h
src/Physics/: PhysicsObject.h  PhysicsScene.cpp  PhysicsScene.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsSystemInterface.h
src/Systems/: CMakeLists.txt  SystemInterface.cpp  SystemInterface.h  SystemObjectInterface.cpp  SystemObjectInterface.h  SystemSceneInterface.cpp  SystemSceneInterface.h
src/Systems/Audio/: AWAVFile.cpp  AudioEngine.cpp  AudioEngine.h  AudioObject.cpp  AudioObject.h  AudioScene.cpp  AudioScene.h  AudioSystem.cpp  AudioSystem.h  CMakeLists.txt
src/Systems/Audio/Auralization/: Auralizer.cpp
src/Systems/Audio/Components/: AMicrophone.cpp  AMicrophone.h  ASpeaker.cpp  ASpeaker.h  AudioComponent.cpp  AudioComponent.h  AuralizingAudioComponent.cpp  AuralizingAudioComponent.h  GeneratingAudioComponent.cpp  GeneratingAudioComponent.h  OutputAudioComponent.cpp  OutputAudioComponent.h
src/Systems/Audio/DSP/: AConvolver.cpp  AConvolver.h  ADSPBase.h  ADelayLine.cpp  ADelayLine.h  AInterpParameter.cpp  AInterpParameter.h
src/Systems/Graphics/: CMakeLists.txt  CameraGraphicsObject.cpp  CameraGraphicsObject.h  GMesh.cpp  GMesh.h  GProgram.cpp  GProgram.h  GTexture.cpp  GTexture.h  GraphicsObject.cpp  GraphicsObject.h  GraphicsScene.cpp  GraphicsScene.h  GraphicsSystem.cpp  GraphicsSystem.h  GraphicsSystemInterface.h  MeshGraphicsObject.cpp  MeshGraphicsObject.h  Render.cpp  Render.h  UIGraphicsObject.cpp  UIGraphicsObject.h
src/Systems/Graphics/Vulkan/: CMakeLists.txt  VulkanAllocator.cpp  VulkanAllocator.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrame.cpp  VulkanFrame.h  VulkanInstance.cpp  VulkanInstance.h  VulkanMaterial.cpp  VulkanMaterial.h  VulkanMesh.cpp  VulkanMesh.h  VulkanModel.cpp  VulkanModel.h  VulkanPipelineLayout.cpp  VulkanPipelineLayout.h  VulkanScene.cpp  VulkanScene.h  VulkanShader.cpp  VulkanShader.h  VulkanShadow.cpp  VulkanShadow.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUI.cpp  VulkanUI.h  VulkanUIObject.cpp  VulkanUIObject.h
src/Systems/Input/: CMakeLists.txt  CameraInputObject.cpp  CameraInputObject.h  InputObject.cpp  InputObject.h  InputScene.cpp  InputScene.h  InputSystem.cpp  InputSystem.h
src/Systems/Physics/: CMakeLists.txt  PhysicsMesh.cpp  PhysicsMesh.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsScene.cpp  PhysicsScene.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsSystemInterface.h
src/UI/: CMakeLists.txt  UIComponent.h  UIManager.cpp  UIManager.h  UIObject.cpp  UIObject.h  UITypes.h
src/Util/: CMakeLists.txt  LFQueue.h  Matrix.cpp  Matrix.h  Observer.cpp  Observer.h  ThreadPool.h
