target_sources(SoundPlayground
  PRIVATE
    CameraGraphicsObject.cpp
    CameraGraphicsObject.h
    GMesh.cpp
    GMesh.h
    GProgram.cpp
    GProgram.h
    GraphicsObject.cpp
    GraphicsObject.h
    GraphicsScene.cpp
    GraphicsScene.h
    GraphicsSystem.cpp
    GraphicsSystem.h
    GraphicsSystemInterface.h
    GTexture.cpp
    GTexture.h
    MeshGraphicsObject.cpp
    MeshGraphicsObject.h
    Render.cpp
    Render.h
    UIGraphicsObject.cpp
    UIGraphicsObject.h
)

add_subdirectory(Vulkan)
